--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style.css" />
 		<script defer src="script.js"></script>
 		<title>JS</title>
-		<h1>JAVASCRIPT PRACTICE FILES</h1>
+		<h1>Object Oriented Programming (OOP)</h1>
 	</head>
 	<body></body>
 </html>
